--- a/faqs.html
+++ b/faqs.html
@@ -186,7 +186,7 @@
           <div class="col-12">
             <nav class="main-nav">
               <!-- ***** Logo Start ***** -->
-              <a href="index" class="logo">
+              <a href="https://ayushkumar.me/" class="logo">
                 <img
                   id="services2"
                   src="assets/images/logo/logo-icon.svg"
@@ -207,7 +207,7 @@
               <!-- ***** Logo End ***** -->
               <!-- ***** Menu Start ***** -->
               <ul class="nav">
-                <li><a href="index">Home</a></li>
+                <li><a href="https://ayushkumar.me/">Home</a></li>
                 <li><a href="testimonials">Testimonials</a></li>
                 <li><a href="about" class="active">My Story</a></li>
                 <li><a href="#contact-us">Contact</a></li>
@@ -215,7 +215,7 @@
                 <li class="inactive"><a href="solutions">Solutions</a></li>
                 <li class="inactive"><a href="faqs">FAQs</a></li>
                 <li class="inactive">
-                  <a href="mentorship-testimonials">Mentorship Reviews</a>
+                  <a href="reviews">Mentorship Reviews</a>
                 </li>
               </ul>
               <a class="menu-trigger">
@@ -471,7 +471,7 @@
       <!-- ***** Features Big Item Start ***** -->
       <section class="section about-features" style="padding-top: 2rem">
         <div class="container">
-          <div class="row">
+          <div class="row extra-pad">
             <div
               class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big show-on-mobile"
               data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
@@ -588,7 +588,7 @@
     <div>
       <section class="section about-features">
         <div class="container">
-          <div class="row">
+          <div class="row extra-pad">
             <div
               class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big show-on-mobile"
               data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
@@ -708,7 +708,7 @@
 
       <section class="section about-features">
         <div class="container">
-          <div class="row">
+          <div class="row extra-pad">
             <div
               class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big show-on-mobile"
               data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
@@ -820,7 +820,7 @@
     </div>
 
     <!-- ***** Testimonials Start ***** -->
-    <section class="section" id="testimonials">
+    <section class="section pad-5rem" id="testimonials">
       <div class="container">
         <!-- ***** Section Title Start ***** -->
         <div class="row">
