--- a/index.html
+++ b/index.html
@@ -224,7 +224,6 @@
               <!-- ***** Logo End ***** -->
               <!-- ***** Menu Start ***** -->
               <ul class="nav">
-                <!-- <li><a href="#welcome" class="active">Home</a></li> -->
                 <li><a href="#work">Work</a></li>
                 <li><a href="testimonials">Testimonials</a></li>
                 <li><a href="about">My Story</a></li>
@@ -233,7 +232,7 @@
                 <li class="inactive"><a href="solutions">Solutions</a></li>
                 <li class="inactive"><a href="faqs">FAQs</a></li>
                 <li class="inactive">
-                  <a href="mentorship-testimonials">Mentorship Reviews</a>
+                  <a href="reviews">Mentorship Reviews</a>
                 </li>
               </ul>
               <a class="menu-trigger">
