--- a/mentorship.html
+++ b/mentorship.html
@@ -184,6 +184,12 @@
       sizes="16x16"
       href="assets/images/logo/logo.png"
     />
+    <style>
+      body,
+      html {
+        overflow-x: hidden;
+      }
+    </style>
   </head>
 
   <body>
@@ -204,7 +210,7 @@
           <div class="col-12">
             <nav class="main-nav">
               <!-- ***** Logo Start ***** -->
-              <a href="index" class="logo">
+              <a href="https://ayushkumar.me/" class="logo">
                 <img
                   id="services2"
                   src="assets/images/logo/logo-icon.svg"
@@ -225,7 +231,7 @@
               <!-- ***** Logo End ***** -->
               <!-- ***** Menu Start ***** -->
               <ul class="nav">
-                <li><a href="index">Home</a></li>
+                <li><a href="https://ayushkumar.me/">Home</a></li>
                 <li><a href="testimonials">Testimonials</a></li>
                 <li><a href="about">My Story</a></li>
                 <li><a href="https://ayushkumar.me/#contact-us">Contact</a></li>
@@ -233,7 +239,7 @@
                 <li class="inactive"><a href="solutions">Solutions</a></li>
                 <li class="inactive"><a href="faqs">FAQs</a></li>
                 <li class="inactive">
-                  <a href="mentorship-testimonials">Mentorship Reviews</a>
+                  <a href="reviews">Mentorship Reviews</a>
                 </li>
               </ul>
               <a class="menu-trigger">
@@ -578,130 +584,17 @@
           </div>
           <!-- ***** Testimonials Item End ***** -->
         </div>
-        <!-- Second Row of Testimonials-->
-        <div class="row" style="margin-top: 30px">
-          <!-- ***** Testimonials Item Start ***** -->
-          <div
-            class="col-lg-4 col-md-6 col-sm-12"
-            data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
+        <div
+          style="text-align: center; margin-top: 30px"
+          data-scroll-reveal="enter bottom move 30px over 0.4s after 0.2s"
+        >
+          <a
+            href="reviews"
+            class="main-button-slider"
+            title="View all testimonials"
+            aria-label="View all testimonials"
+            >Read all reviews</a
           >
-            <div class="team-item">
-              <div class="team-content">
-                <i class="testi">
-                  <img
-                    src="assets/images/testimonials/icon.svg"
-                    loading="lazy"
-                    width="200"
-                    height="35"
-                    alt=""
-                  />
-                </i>
-                <p>
-                  "Ayush is an awesome designer and also a wonderful mentor. His
-                  guidance is incredible for aspiring UI/UX designers. I enjoyed
-                  our conversation and I felt like he answered all of my
-                  questions about design and freelancing.I highly recommend
-                  Ayush"
-                </p>
-                <div class="user-image" style="display: none">
-                  <img
-                    src="assets/images/testimonials/ujjwal.webp"
-                    loading="lazy"
-                    width="60"
-                    height="60"
-                    alt="ujjwal-maheshwari-marketinc-director"
-                  />
-                </div>
-                <div class="team-info mar-30">
-                  <h3 class="user-name">Hemanth Krishna</h3>
-                  <span>UI/UX Aspirant</span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- ***** Testimonials Item End ***** -->
-
-          <!-- ***** Testimonials Item Start ***** -->
-          <div
-            class="col-lg-4 col-md-6 col-sm-12"
-            data-scroll-reveal="enter bottom move 50px over 0.6s after 0.4s"
-          >
-            <div class="team-item" id="pink">
-              <div class="team-content">
-                <i class="testi">
-                  <img
-                    src="assets/images/testimonials/icon.svg"
-                    loading="lazy"
-                    width="200"
-                    height="35"
-                    alt=""
-                  />
-                </i>
-                <p>
-                  "Ayush was super helpful and gave me some amazing insights on
-                  my case studies and also some great tips and tricks for my
-                  portfolio redesign. He would be a fantastic help for anyone
-                  looking to get their first role in the industry. Thank you so
-                  much, Ayush"
-                </p>
-                <div class="user-image" style="display: none">
-                  <img
-                    src="assets/images/testimonials/audil.webp"
-                    loading="lazy"
-                    alt="audil-iqbal-zebo.ai-cto"
-                    width="60"
-                    height="60"
-                  />
-                </div>
-                <div class="team-info mar-30">
-                  <h3 class="user-name">Khuswanth Srinath</h3>
-                  <span>UI/UX Aspirant</span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- ***** Testimonials Item End ***** -->
-
-          <!-- ***** Testimonials Item Start ***** -->
-          <div
-            class="col-lg-4 col-md-6 col-sm-12"
-            data-scroll-reveal="enter bottom move 50px over 0.6s after 0.6s"
-          >
-            <div class="team-item">
-              <div class="team-content">
-                <i class="testi">
-                  <img
-                    src="assets/images/testimonials/icon.svg"
-                    loading="lazy"
-                    width="200"
-                    height="35"
-                    alt=""
-                  />
-                </i>
-                <p>
-                  "Ayush created a customized plan to help in my pursuit of UX
-                  design. He is very professional answered all of my questions.
-                  His feedback and critique of my designs were helpful and
-                  insightful to improve on my skillset. I would recommend Ayush,
-                  without a doubt."
-                </p>
-                <div class="user-image" style="display: none">
-                  <img
-                    src="assets/images/testimonials/keshav.webp"
-                    loading="lazy"
-                    alt="keshav-patil-preplaced-cpo"
-                    width="60"
-                    height="60"
-                  />
-                </div>
-                <div class="team-info mar-30">
-                  <h3 class="user-name">Abhay Singh</h3>
-                  <span>Design Aspirant</span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- ***** Testimonials Item End ***** -->
         </div>
       </div>
     </section>
@@ -882,11 +775,20 @@
             <img
               src="assets/images/ayush.webp"
               loading="lazy"
-              class="rounded img-fluid d-block mx-auto"
+              class="rounded img-fluid d-block mx-auto desk"
               alt="App"
               width="400"
               height="400"
-              title="I know my picture left probably sucks, I promise I'll work on it! My camera broke so I can't take high-quality photos as of now, and I'm broke too 😭, so I can't buy a high-quality camera."
+              title="I know this picture probably sucks, I promise I'll work on it! My camera broke so I can't take high-quality photos as of now, and I'm broke too 😭, so I can't buy a high-quality camera."
+            />
+            <img
+              src="assets/images/ayush-mob.webp"
+              loading="lazy"
+              class="rounded img-fluid d-block mx-auto mob"
+              alt="App"
+              width="400"
+              height="400"
+              title="I know this picture probably sucks, I promise I'll work on it! My camera broke so I can't take high-quality photos as of now, and I'm broke too 😭, so I can't buy a high-quality camera."
             />
           </div>
           <div class="col-lg-1"></div>
