--- a/404.html
+++ b/404.html
@@ -166,7 +166,7 @@
           <div class="col-12">
             <nav class="main-nav">
               <!-- ***** Logo Start ***** -->
-              <a href="#welcome" class="logo">
+              <a href="https://ayushkumar.me/" class="logo">
                 <img
                   id="services2"
                   src="assets/images/logo/logo-icon.svg"
@@ -187,7 +187,6 @@
               <!-- ***** Logo End ***** -->
               <!-- ***** Menu Start ***** -->
               <ul class="nav">
-                <!-- <li><a href="#welcome" class="active">Home</a></li> -->
                 <li><a href="https://ayushkumar.me/#work">Work</a></li>
                 <li><a href="testimonials">Testimonials</a></li>
                 <li><a href="about">My Story</a></li>
@@ -196,7 +195,7 @@
                 <li class="inactive"><a href="solutions">Solutions</a></li>
                 <li class="inactive"><a href="faqs">FAQs</a></li>
                 <li class="inactive">
-                  <a href="mentorship-testimonials">Mentorship Reviews</a>
+                  <a href="reviews">Mentorship Reviews</a>
                 </li>
               </ul>
               <a class="menu-trigger">
