--- a/about.html
+++ b/about.html
@@ -196,7 +196,7 @@
           <div class="col-12">
             <nav class="main-nav">
               <!-- ***** Logo Start ***** -->
-              <a href="index" class="logo">
+              <a href="https://ayushkumar.me/" class="logo">
                 <img
                   id="services2"
                   src="assets/images/logo/logo-icon.svg"
@@ -217,8 +217,7 @@
               <!-- ***** Logo End ***** -->
               <!-- ***** Menu Start ***** -->
               <ul class="nav">
-                <!-- <li><a href="#welcome" class="active">Home</a></li> -->
-                <li><a href="index">Home</a></li>
+                <li><a href="https://ayushkumar.me/">Home</a></li>
                 <li><a href="testimonials">Testimonials</a></li>
                 <li><a href="about" class="active">My Story</a></li>
                 <li><a href="#contact-us">Contact</a></li>
@@ -226,7 +225,7 @@
                 <li class="inactive"><a href="solutions">Solutions</a></li>
                 <li class="inactive"><a href="faqs">FAQs</a></li>
                 <li class="inactive">
-                  <a href="mentorship-testimonials">Mentorship Reviews</a>
+                  <a href="reviews">Mentorship Reviews</a>
                 </li>
               </ul>
               <a class="menu-trigger">
