--- a/reviews.html
+++ b/reviews.html
@@ -32,7 +32,7 @@
         a.appendChild(r);
       })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
     </script>
-    <title>Mentorship Testimonials</title>
+    <title>Mentorship Reviews</title>
     <!-- SEO Tags -->
     <meta charset="utf-8" />
     <meta
@@ -197,7 +197,7 @@
           <div class="col-12">
             <nav class="main-nav">
               <!-- ***** Logo Start ***** -->
-              <a href="index" class="logo">
+              <a href="https://ayushkumar.me/" class="logo">
                 <img
                   id="services2"
                   src="assets/images/logo/logo-icon.svg"
@@ -218,7 +218,7 @@
               <!-- ***** Logo End ***** -->
               <!-- ***** Menu Start ***** -->
               <ul class="nav">
-                <li><a href="index">Home</a></li>
+                <li><a href="https://ayushkumar.me/">Home</a></li>
                 <li><a href="testimonials">Testimonials</a></li>
                 <li><a href="about">My Story</a></li>
                 <li><a href="#contact-us">Contact</a></li>
@@ -226,7 +226,7 @@
                 <li class="inactive"><a href="solutions">Solutions</a></li>
                 <li class="inactive"><a href="faqs">FAQs</a></li>
                 <li class="inactive">
-                  <a href="mentorship-testimonials">Mentorship Reviews</a>
+                  <a href="reviews">Mentorship Reviews</a>
                 </li>
               </ul>
               <a class="menu-trigger">
@@ -392,7 +392,7 @@
           <!-- ***** Testimonials Item End ***** -->
         </div>
         <!-- Second Row of Testimonials-->
-        <div class="row" style="margin-top: 30px">
+        <div class="row" style="margin-top: 15px">
           <!-- ***** Testimonials Item Start ***** -->
           <div
             class="col-lg-4 col-md-6 col-sm-12"
@@ -519,10 +519,10 @@
       </div>
     </section>
 
-    <section class="section colored" id="contact-us">
+    <section class="section colored pad-5rem" id="contact-us">
       <div class="container">
         <!-- ***** Section Title Start ***** -->
-        <div class="row">
+        <div class="row extra-pad">
           <div class="col-lg-12">
             <div
               class="center-heading"
@@ -538,7 +538,7 @@
                 full refund by sending a mail at
                 <a href="mailto:hey@ayushkumar.me">hey@ayushkumar.me.</a>
               </p>
-              <br />
+              <br /><br />
               <a
                 href="https://calendly.com/ui-ux/mentorship"
                 aria-label=""
