Added Work Page and optimized images

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                     I craft <br /><strong>Experiences</strong><br />people
                     love<br />to use
                   </h1>
-                  <p style="font-weight: 500">A Multidisciplinary Designer</p>
+                  <p style="font-weight: 500">A Full Stack Designer</p>
                   <a
                     href="#work"
                     aria-label="See work"
@@ -517,7 +517,7 @@
               </div>
               <div class="blog-content">
                 <h3>Preplaced</h3>
-                <div class="text">Design and Consultation</div>
+                <div class="text">Branding, Design and Consultation</div>
                 <a
                   href="https://www.figma.com/proto/0rex50DSbe6qPz6kUuqwJG/Case-Studies?node-id=0%3A1"
                   class="project-button"
@@ -630,9 +630,9 @@
             </div>
           </div>
         </div>
-        <div style="text-align: center; margin-top: 50px" class="all-projects">
+        <div class="all-projects">
           <a
-            href="dribbble.com"
+            href="https://www.instagram.com/_ayush_chandra/"
             class="main-button-slider"
             title="See all projects"
             aria-label="See all projects"
@@ -1442,7 +1442,6 @@
     <!-- Global Custom JS -->
     <script defer src="assets/js/custom.js"></script>
 
-    <script defer src="assets/js/embed.js"></script>
     <script src="assets/js/kursor.min.js"></script>
 
     <!--Round Custom Cursor -->
