--- a/404.html
+++ b/404.html
@@ -193,6 +193,7 @@
                 <li><a href="https://ayushkumar.me/#contact-us">Contact</a></li>
                 <li><a href="mentorship">Mentorship</a></li>
                 <li class="inactive"><a href="solutions">Solutions</a></li>
+                <li class="inactive"><a href="work">Work</a></li>
                 <li class="inactive"><a href="faqs">FAQs</a></li>
                 <li class="inactive">
                   <a href="reviews">Mentorship Reviews</a>
