--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
     <meta charset="utf-8" />
     <meta
       name="keywords"
-      content="ui ux designer, ui ux designer portfolio website, ui and ux designer, ayush kumar ui ux designer, ayush kumar ui ux designer about me, ui ux designer about"
+      content="ayush kumar ui ux designer, ui ux designer portfolio website, ui and ux designer, ayush kumar ui ux designer, ayush kumar ui ux designer about me, ui ux designer about"
     />
     <meta
       name="description"
@@ -223,6 +223,7 @@
                 <li><a href="#contact-us">Contact</a></li>
                 <li><a href="mentorship">Mentorship</a></li>
                 <li class="inactive"><a href="solutions">Solutions</a></li>
+                <li class="inactive"><a href="work">Work</a></li>
                 <li class="inactive"><a href="faqs">FAQs</a></li>
                 <li class="inactive">
                   <a href="reviews">Mentorship Reviews</a>
@@ -248,36 +249,35 @@
             <div
               class="offset-xl-3 col-xl-6 offset-lg-2 col-lg-8 col-md-12 col-sm-12"
             >
-              <div class="">
-                <p
-                  id="hithere"
-                  data-scroll-reveal="enter bottom move 50px over 0.4s after 0.2s"
-                  class=""
+              <h1 class="inactive">I am Ayush a UI UX Designer</h1>
+              <p
+                id="hithere"
+                data-scroll-reveal="enter bottom move 50px over 0.4s after 0.2s"
+                class=""
+              >
+                Hi 👋, I'm Ayush
+              </p>
+              <div
+                data-scroll-reveal="enter bottom move 50px over 0.6s after 0.6s"
+              >
+                <h1 class="desk">
+                  A Designer<br />
+                  from Psychology<br />
+                  and Photography<br />
+                  background.
+                </h1>
+                <h1 class="mob">
+                  A Designer from Psychology and Photography background.
+                </h1>
+                <p style="font-weight: 500">P.S. I also have a major in IT</p>
+                <a
+                  href="#features"
+                  aria-label="See work"
+                  class="main-button-slider"
+                  title="read my story"
+                  aria-label="read my story"
+                  >Read my story</a
                 >
-                  Hi 👋, I'm Ayush
-                </p>
-                <div
-                  data-scroll-reveal="enter bottom move 50px over 0.6s after 0.6s"
-                >
-                  <h1 class="desk">
-                    A Designer<br />
-                    from Psychology<br />
-                    and Photography<br />
-                    background.
-                  </h1>
-                  <h1 class="mob">
-                    A Designer from Psychology and Photography background.
-                  </h1>
-                  <p style="font-weight: 500">P.S. I also have a major in IT</p>
-                  <a
-                    href="#features"
-                    aria-label="See work"
-                    class="main-button-slider"
-                    title="read my story"
-                    aria-label="read my story"
-                    >Read my story</a
-                  >
-                </div>
               </div>
               <section id="section10" class="demo pdesk">
                 <a href="#features" style="font-size: 10px"
