--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
                 <li><a href="#contact-us">Contact</a></li>
                 <li><a href="mentorship">Mentorship</a></li>
                 <li class="inactive"><a href="solutions">Solutions</a></li>
+                <li class="inactive"><a href="work">Work</a></li>
                 <li class="inactive"><a href="faqs">FAQs</a></li>
                 <li class="inactive">
                   <a href="reviews">Mentorship Reviews</a>
@@ -253,32 +254,30 @@
             <div
               class="offset-xl-3 col-xl-6 offset-lg-2 col-lg-8 col-md-12 col-sm-12"
             >
-              <div class="">
-                <h1 class="inactive">I am Ayush a ui ux designer</h1>
-                <p
-                  id="hithere"
-                  data-scroll-reveal="enter bottom move 50px over 0.4s after 0.2s"
-                  class=""
+              <h1 class="inactive">I am Ayush a ui ux designer</h1>
+              <p
+                id="hithere"
+                data-scroll-reveal="enter bottom move 50px over 0.4s after 0.2s"
+                class=""
+              >
+                Hi 👋, I'm Ayush
+              </p>
+              <div
+                data-scroll-reveal="enter bottom move 50px over 0.6s after 0.4s"
+              >
+                <h1>
+                  I craft <br /><strong>Experiences</strong><br />people love<br />to
+                  use
+                </h1>
+                <p style="font-weight: 500">A Full Stack Designer</p>
+                <a
+                  href="#work"
+                  aria-label="See work"
+                  class="main-button-slider"
+                  title="See my work"
+                  aria-label="See work"
+                  >See work</a
                 >
-                  Hi 👋, I'm Ayush
-                </p>
-                <div
-                  data-scroll-reveal="enter bottom move 50px over 0.6s after 0.4s"
-                >
-                  <h1>
-                    I craft <br /><strong>Experiences</strong><br />people
-                    love<br />to use
-                  </h1>
-                  <p style="font-weight: 500">A Full Stack Designer</p>
-                  <a
-                    href="#work"
-                    aria-label="See work"
-                    class="main-button-slider"
-                    title="See my work"
-                    aria-label="See work"
-                    >See work</a
-                  >
-                </div>
               </div>
               <section id="section10" class="demo pdesk">
                 <a href="#second-vp" style="font-size: 10px"
@@ -1122,6 +1121,7 @@
                 <ul class="list">
                   <li class="active">Product Audit</li>
                   <li class="active">UX Consultation</li>
+                  <li class="active">Business Solutions</li>
                 </ul>
               </div>
               <div class="pricing-footer">
@@ -1144,7 +1144,7 @@
               <div class="pricing-body">
                 <div class="price-wrapper">
                   <span class="currency">$</span>
-                  <span class="price">300</span>
+                  <span class="price">1000</span>
                   <span class="period">per project</span>
                 </div>
                 <ul class="list">
