--- a/solutions.html
+++ b/solutions.html
@@ -213,6 +213,7 @@
                 <li><a href="#contact-us">Contact</a></li>
                 <li><a href="mentorship">Mentorship</a></li>
                 <li class="inactive"><a href="solutions">Solutions</a></li>
+                <li class="inactive"><a href="work">Work</a></li>
                 <li class="inactive"><a href="faqs">FAQs</a></li>
                 <li class="inactive">
                   <a href="reviews">Mentorship Reviews</a>
@@ -400,7 +401,7 @@
               <div class="pricing-body">
                 <div class="price-wrapper">
                   <span class="currency">$</span>
-                  <span class="price">300</span>
+                  <span class="price">3000</span>
                   <span class="period">per project</span>
                 </div>
                 <ul class="list">
